style: fix layout problems

--- a/bundles/common/components/Layout/Layout.module.sass
+++ b/bundles/common/components/Layout/Layout.module.sass
@@ -1,8 +1,10 @@
 .container
     display: grid
-    grid-template-columns: 1fr min(75%, 1200px) 1fr
+    grid-template-columns: 1fr min(75%, 1100px) 1fr
+    grid-template-rows: min-content min-content 1fr min-content
+    min-height: 100vh
 
-    >*
+    > *
         grid-column: 2
 
     .footer
